multiple Api call issue solve

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:icon="@drawable/bkash"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:enableOnBackInvokedCallback="true"
         android:windowSoftInputMode="adjustResize"
         android:theme="@style/Theme.BKashTokenizedRnD"
         tools:targetApi="31">
